<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMailPedido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mailPedido" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tipoEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@android:string/fingerprint_icon_content_description"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tvHoraEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horaEntrega" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCantidadItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cantidadItemsPedido" />

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/prceioPedido" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/estadoPedido" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnVerDetallePedido"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verDetalle" />
    </LinearLayout>

</LinearLayout>
