<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnMainNuevoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevoPedido" />

    <Button
        android:id="@+id/btnListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productList" />

    <Button
        android:id="@+id/btnHistorialPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_pedidos" />

    <Button
        android:id="@+id/btnPrepararPedidos"
        android:text="@string/prepararPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>