<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSelectCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCategoria" />

    <Spinner
        android:id="@+id/cmbProductosCategoria"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tvListaProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productList" />

    <ListView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>

    <TextView
        android:id="@+id/tvCantidadPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantPedir" />

    <EditText
        android:id="@+id/edtProdCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/cantProducto" />

    <Button
        android:id="@+id/btnProdAddPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregarProducto" />
</android.support.v7.widget.LinearLayoutCompat>