<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSelectCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectCategoria" />

    <Spinner
        android:id="@+id/spinnerProductosCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productList" />

    <Spinner
        android:id="@+id/spinnerListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:choiceMode="singleChoice">

    </ListView>

    <TextView
        android:id="@+id/tvCantidadPedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantPedir" />

    <EditText
        android:id="@+id/edtProdCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantProducto"
        android:inputType="number" />

    <Button
        android:id="@+id/btnProdAddPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAgregarProducto" />
</LinearLayout>