<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AltaPedidoActivity">

        <TextView
            android:id="@+id/tvPedidoRealizado"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/tvPedidoRealizado" />

    <ListView
        android:id="@+id/lstHistorialPedidos"
        android:layout_width="match_parent"
        android:layout_height="438dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHistorialNuevo"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/btnHistorialNuevo" />

        <Button
            android:id="@+id/btnHistorialMenu"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/btnHistorialMenu" />

    </LinearLayout>
</LinearLayout>

